<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".ui.CreateAccountActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_marginTop="35dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/get_started_email"
                android:backgroundTint="@color/primary"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/primary_text"
                android:id="@+id/create_account_email"
                android:inputType="textEmailAddress"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_account_confirm_email"
                android:backgroundTint="@color/primary"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/primary_text"
                android:id="@+id/create_account_confirm_email"
                android:paddingTop="30dp"
                android:inputType="textEmailAddress"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/get_started_password"
                android:backgroundTint="@color/primary"
                android:textColor="@color/primary_text"
                android:paddingTop="50dp"
                android:textColorHint="@color/primary_text"
                android:id="@+id/create_account_password"
                android:inputType="textPassword"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_account_confirm_password"
                android:backgroundTint="@color/primary"
                android:textColor="@color/primary_text"
                android:paddingTop="30dp"
                android:textColorHint="@color/primary_text"
                android:id="@+id/create_account_confirm_password"
                android:inputType="textPassword"
                android:layout_marginBottom="150dp"/>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:background="@color/primary"
            android:text="@string/create_account_create"
            android:fontFamily="sans-serif-light"
            android:textSize="16sp"
            android:textColor="@color/text_and_icon"
            android:textStyle="bold"
            android:id="@+id/create_account_create"/>
    </RelativeLayout>

</RelativeLayout>
